--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,21 @@
-<h1>Welcome to My Website</h1>
+<h1>Which pet is cutest?</h1>
+
+{{#each pets}}
+    <p>{{name}}</p>
+    <img src="img/{{image}}" alt="Photo of {{name}}">
+{{/each}}
+
+<form action="/vote" method="POST">
+
+<fieldset>
+    <legend>Which pet wins?</legend>
+{{#each pets}}
+    <input type="radio" id="pet-{{index}}" name="{{name}}" value="{{name}}"></input>
+    <label for="pet-{{index}}">{{name}}</label>
+{{/each}}
+</fieldset>
+    <textarea id="comments" name="comments"></textarea>
+
+    <button type="submit" value="Vote">Vote</button>
+
+</form>
